--- a/test/Beeswarm.html
+++ b/test/Beeswarm.html
@@ -7,6 +7,8 @@
     <title>Title</title>
     <script src="../dist/bundle.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../src/styles/main.css"></link>
+
   </head>
 
   <body>
@@ -23,7 +25,7 @@
 
     <script>
       function loadDataSet() {
-        const dataset = d3.csv("./dataset/carros_teste3.csv", function (data) {
+        const dataset = d3.csv("./dataset/iris.csv", function (data) {
           return data;
         });
 
@@ -35,22 +37,19 @@
           dataset = await loadDataSet();
 
           const attr = [
-            "NRCILINDROS",
-            "POTENCIA",
-            "TIPO",
-            "COMBUSTIVEL",
-            "RPM",
+          "sepal_length","sepal_width","petal_length","petal_width","variety"
           ];
+          console.log('interpolate color',d3.interpolateMagma)
 
           // htmlElementId,data, xType, yType, xLabel, yLabel, radius, width, height
-          beeswarm = new casvis.Beeswarm(
+          beeswarm = new casvis.BeeswarmGroup(
             "canvas1",
             dataset,
-            attr[2],
             attr[4],
-            10,
+            attr[1],
+            5,
             800,
-            600,
+            400,
             (this.settings = {
               color: "#069", //"grey",//"#069",
               highlightColor: "#FF1122", //"#08E700",
@@ -64,8 +63,9 @@
               paddingRight: 50,
               paddingBottom: 30,
               autoresize: true,
-              colorAttr: attr[2],
-              colors: ["pink", "yellow", "steelblue","red","green"],
+              colorAttr: attr[4],
+              theme: "dark",
+              interpolate: d3.interpolateGreens
             })
           );
           beeswarm.setTooltipLabels(
