ajustando nome da lib

--- a/test/Beeswarm.html
+++ b/test/Beeswarm.html
@@ -42,7 +42,7 @@
           console.log('interpolate color',d3.interpolateMagma)
 
           // htmlElementId,data, xType, yType, xLabel, yLabel, radius, width, height
-          beeswarm = new casvis.BeeswarmGroup(
+          beeswarm = new vis.BeeswarmGroup(
             "canvas1",
             dataset,
             attr[4],
