ajuste de configurações da lib

--- a/test/Beeswarm.html
+++ b/test/Beeswarm.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Title</title>
-    <script src="../dist/bundle.js"></script>
+    <!-- <script src="../dist/bundle.js"></script> -->
+    <script src="http://localhost:8080/bundle.js"></script>
+
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../src/styles/main.css"></link>
 
