--- a/test/Beeswarm.html
+++ b/test/Beeswarm.html
@@ -44,176 +44,176 @@
           console.log('interpolate color',d3.interpolateMagma)
 
           // htmlElementId,data, xType, yType, xLabel, yLabel, radius, width, height
-          beeswarm0 = new vis.BeeswarmPlot(
-            "canvas0",
-            dataset,
-            attr[7],
-            5,
-            700,
-            400,
-            (this.settings = {
-              color: "#069", //"grey",//"#069",
-              highlightColor: "#FF1122", //"#08E700",
-              opacity: 1,
-              notSelectedOpacity: 0.15,
-              size_type: "fit", //"absolute"
-              width: 700,
-              height: 400,
-              paddingTop: 25,
-              paddingLeft: 50,
-              paddingRight: 50,
-              paddingBottom: 30,
-              autoresize: true,
-              colorAttr: attr[7],
-              theme: "light",
-              orientation: 'y',
-              margin:{top: 30, right: 10, bottom: 60, left: 60 },
-              showLegend: true,
-              interpolate: d3.interpolateMagma
-              // colors:['red','blue','pink',"green"]
-            })
-          );
-          beeswarm0.setTooltipLabels(
-            [attr[3],
-            attr[4]]);
-          beeswarm0.draw();
-          console.log(beeswarm0);
+          // beeswarm0 = new vis.BeeswarmPlot(
+          //   "canvas0",
+          //   dataset,
+          //   attr[7],
+          //   5,
+          //   700,
+          //   400,
+          //   (this.settings = {
+          //     color: "#069", //"grey",//"#069",
+          //     highlightColor: "#FF1122", //"#08E700",
+          //     opacity: 1,
+          //     notSelectedOpacity: 0.15,
+          //     size_type: "fit", //"absolute"
+          //     width: 700,
+          //     height: 400,
+          //     paddingTop: 25,
+          //     paddingLeft: 50,
+          //     paddingRight: 50,
+          //     paddingBottom: 30,
+          //     autoresize: true,
+          //     colorAttr: attr[7],
+          //     theme: "light",
+          //     orientation: 'y',
+          //     margin:{top: 30, right: 10, bottom: 60, left: 60 },
+          //     showLegend: true,
+          //     interpolate: d3.interpolateMagma
+          //     // colors:['red','blue','pink',"green"]
+          //   })
+          // );
+          // beeswarm0.setTooltipLabels(
+          //   [attr[3],
+          //   attr[4]]);
+          // beeswarm0.draw();
+          // console.log(beeswarm0);
           
-          beeswarm = new vis.BeeswarmPlot(
-            "canvas1",
-            dataset,
-            attr[7],
-            5,
-            700,
-            400,
-            (this.settings = {
-              color: "#069", //"grey",//"#069",
-              highlightColor: "#FF1122", //"#08E700",
-              opacity: 1,
-              notSelectedOpacity: 0.15,
-              size_type: "fit", //"absolute"
-              width: 700,
-              height: 400,
-              paddingTop: 25,
-              paddingLeft: 50,
-              paddingRight: 50,
-              paddingBottom: 30,
-              autoresize: true,
-              colorAttr: attr[7],
-              margin:{top: 30, right: 10, bottom: 60, left: 60 },
-              theme: "light",
-              orientation: 'x',
-              // colors:['red','blue','pink',"green"]
-            })
-          );
-          beeswarm.setTooltipLabels(
-            [attr[3],
-            attr[4]]);
-          beeswarm.draw();
-          console.log(beeswarm);
+          // beeswarm = new vis.BeeswarmPlot(
+          //   "canvas1",
+          //   dataset,
+          //   attr[7],
+          //   5,
+          //   700,
+          //   400,
+          //   (this.settings = {
+          //     color: "#069", //"grey",//"#069",
+          //     highlightColor: "#FF1122", //"#08E700",
+          //     opacity: 1,
+          //     notSelectedOpacity: 0.15,
+          //     size_type: "fit", //"absolute"
+          //     width: 700,
+          //     height: 400,
+          //     paddingTop: 25,
+          //     paddingLeft: 50,
+          //     paddingRight: 50,
+          //     paddingBottom: 30,
+          //     autoresize: true,
+          //     colorAttr: attr[7],
+          //     margin:{top: 30, right: 10, bottom: 60, left: 60 },
+          //     theme: "light",
+          //     orientation: 'x',
+          //     // colors:['red','blue','pink',"green"]
+          //   })
+          // );
+          // beeswarm.setTooltipLabels(
+          //   [attr[3],
+          //   attr[4]]);
+          // beeswarm.draw();
+          // console.log(beeswarm);
 
-          beeswarm3 = new vis.BeeswarmGroup(
-            "canvas2",
-            dataset,
-            attr[4],
-            attr[1],
-            4,
-            800,
-            400,
-            (this.settings = {
-              color: "#069", //"grey",//"#069",
-              highlightColor: "#FF1122", //"#08E700",
-              opacity: 1,
-              notSelectedOpacity: 0.15,
-              size_type: "fit", //"absolute"
-              width: 800,
-              height: 600,
-              paddingTop: 25,
-              paddingLeft: 50,
-              paddingRight: 50,
-              paddingBottom: 30,
-              autoresize: true,
-              margin:{top: 30, right: 10, bottom: 60, left: 60 },
-              colorAttr: attr[1],
-              theme: "dark",
-              // colors:['red','blue','pink',"green"]
-            })
-          );
-          beeswarm3.setTooltipLabels(
-            [attr[4],
-            attr[1]]);
-          beeswarm3.draw();
-          console.log(beeswarm3);
+          // beeswarm3 = new vis.BeeswarmGroup(
+          //   "canvas2",
+          //   dataset,
+          //   attr[4],
+          //   attr[1],
+          //   4,
+          //   800,
+          //   400,
+          //   (this.settings = {
+          //     color: "#069", //"grey",//"#069",
+          //     highlightColor: "#FF1122", //"#08E700",
+          //     opacity: 1,
+          //     notSelectedOpacity: 0.15,
+          //     size_type: "fit", //"absolute"
+          //     width: 800,
+          //     height: 600,
+          //     paddingTop: 25,
+          //     paddingLeft: 50,
+          //     paddingRight: 50,
+          //     paddingBottom: 30,
+          //     autoresize: true,
+          //     margin:{top: 30, right: 10, bottom: 60, left: 60 },
+          //     colorAttr: attr[1],
+          //     theme: "dark",
+          //     // colors:['red','blue','pink',"green"]
+          //   })
+          // );
+          // beeswarm3.setTooltipLabels(
+          //   [attr[4],
+          //   attr[1]]);
+          // beeswarm3.draw();
+          // console.log(beeswarm3);
         
-          beeswarm2 = new vis.BeeswarmGroup(
-            "canvas3",
-            dataset,
-            attr[2],
-            attr[4],
-            5,
-            800,
-            400,
-            (this.settings = {
-              color: "#069", //"grey",//"#069",
-              highlightColor: "#FF1122", //"#08E700",
-              opacity: 1,
-              notSelectedOpacity: 0.15,
-              size_type: "fit", //"absolute"
-              width: 800,
-              height: 600,
-              paddingTop: 25,
-              paddingLeft: 50,
-              paddingRight: 50,
-              paddingBottom: 30,
-              autoresize: true,
-              margin:{top: 30, right: 60, bottom: 60, left: 60 },
-              colorAttr: attr[4],
-              forceX:5,
-              forceY:5,
-              theme: "light",
-              // colors:['red','blue','pink',"green"]
-            })
-          );
-          beeswarm2.setTooltipLabels(
-            [attr[4],
-            attr[2]]);
-          beeswarm2.draw();
-          console.log(beeswarm2);
+          // beeswarm2 = new vis.BeeswarmGroup(
+          //   "canvas3",
+          //   dataset,
+          //   attr[2],
+          //   attr[4],
+          //   5,
+          //   800,
+          //   400,
+          //   (this.settings = {
+          //     color: "#069", //"grey",//"#069",
+          //     highlightColor: "#FF1122", //"#08E700",
+          //     opacity: 1,
+          //     notSelectedOpacity: 0.15,
+          //     size_type: "fit", //"absolute"
+          //     width: 800,
+          //     height: 600,
+          //     paddingTop: 25,
+          //     paddingLeft: 50,
+          //     paddingRight: 50,
+          //     paddingBottom: 30,
+          //     autoresize: true,
+          //     margin:{top: 30, right: 60, bottom: 60, left: 60 },
+          //     colorAttr: attr[4],
+          //     forceX:5,
+          //     forceY:5,
+          //     theme: "light",
+          //     // colors:['red','blue','pink',"green"]
+          //   })
+          // );
+          // beeswarm2.setTooltipLabels(
+          //   [attr[4],
+          //   attr[2]]);
+          // beeswarm2.draw();
+          // console.log(beeswarm2);
 
-          beeswarm4 = new vis.BeeswarmGroup(
-            "canvas4",
-            dataset,
-            attr[0],
-            attr[4],
-            4,
-            800,
-            400,
-            (this.settings = {
-              color: "#069", //"grey",//"#069",
-              highlightColor: "#FF1122", //"#08E700",
-              opacity: 1,
-              notSelectedOpacity: 0.15,
-              size_type: "fit", //"absolute"
-              width: 800,
-              height: 600,
-              paddingTop: 25,
-              paddingLeft: 50,
-              paddingRight: 50,
-              paddingBottom: 30,
-              autoresize: true,
-              margin:{top: 10, right: 10, bottom: 60, left: 60 },
-              colorAttr: attr[3],
-              theme: "dark",
-              colors:['blue','pink',"green"],
-              forceSteps: 1000
-              // colors:['red','blue','pink',"green"]
-            })
-          );
-          beeswarm4.setTooltipLabels(
-            [attr[3],
-            attr[4]]);
-          beeswarm4.draw();
-          console.log(beeswarm4)
+          // beeswarm4 = new vis.BeeswarmGroup(
+          //   "canvas4",
+          //   dataset,
+          //   attr[0],
+          //   attr[4],
+          //   4,
+          //   800,
+          //   400,
+          //   (this.settings = {
+          //     color: "#069", //"grey",//"#069",
+          //     highlightColor: "#FF1122", //"#08E700",
+          //     opacity: 1,
+          //     notSelectedOpacity: 0.15,
+          //     size_type: "fit", //"absolute"
+          //     width: 800,
+          //     height: 600,
+          //     paddingTop: 25,
+          //     paddingLeft: 50,
+          //     paddingRight: 50,
+          //     paddingBottom: 30,
+          //     autoresize: true,
+          //     margin:{top: 10, right: 10, bottom: 60, left: 60 },
+          //     colorAttr: attr[3],
+          //     theme: "dark",
+          //     colors:['blue','pink',"green"],
+          //     forceSteps: 1000
+          //     // colors:['red','blue','pink',"green"]
+          //   })
+          // );
+          // beeswarm4.setTooltipLabels(
+          //   [attr[3],
+          //   attr[4]]);
+          // beeswarm4.draw();
+          // console.log(beeswarm4)
 
           beeswarm5 = new vis.BeeswarmGroup(
             "canvas5",
@@ -245,9 +245,24 @@
               // colors:['red','blue','pink',"green"]
             })
           );
-          beeswarm5.setTooltipLabels(
-            attr);
-          beeswarm5.draw();
+          beeswarm5.setTooltipLabels(attr);
+          beeswarm5.setTooltip();
+
+          beeswarm5.draw()
+
+          beeswarm5.dotGroup.on('mouseover',(d)=>{
+            console.log(d)
+            console.log(d.title)
+            console.log(d.target)
+            d3.select(d.target).attr('stroke','red')
+          })
+          beeswarm5.dotGroup.on('mouseout',(d)=>{
+            d3.select(d.target).attr('stroke','none')
+          })
+          console.log(test);
+
+
+            //console.log("d:",d);
           console.log(beeswarm5)
         }
         main();
