include types d.ts

--- a/test/Beeswarm.html
+++ b/test/Beeswarm.html
@@ -239,7 +239,7 @@
               interpolate: d3.interpolateMagma,
               forceX: 5,
               forceY:2,
-              dotsType: 'circle',
+              dotsType: 'hex',
               // colors:['red','blue','pink',"green"]
             })
           );
